// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders checked correctly 1`] = `
<button
  className="sc-bdVaJa gvSHMM"
>
  <svg
    className="sc-bwzfXH juarmv"
    fill="none"
    height={32}
    id="i-close"
    stroke="currentcolor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 32 32"
    width={32}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 2 L16 30 M2 16 L30 16"
    />
  </svg>
  &gt;
</button>
`;

exports[`renders correctly 1`] = `
<button
  className="sc-bdVaJa gvSHMM"
>
  <svg
    className="sc-bwzfXH juarmv"
    fill="none"
    height={32}
    id="i-close"
    stroke="currentcolor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 32 32"
    width={32}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 2 L16 30 M2 16 L30 16"
    />
  </svg>
</button>
`;
